src/main/java/com/example/loginserver/Errors/PasswordError.java
package com.example.loginserver.Errors;

public enum PasswordError {
    URL_ERROR,
    OPEN_CONNECTION_ERROR,
    ELSE_ERROR,
    READ_ERROR,
    GOOD,
    LENGTH_ERROR,
    NO_BIG_CHAR,
    NO_SMALL_CHAR,
    NO_NUMBER,
    NO_SPECIAL_CHAR,
    COMPANY_NOT_FOUND,
    TheSamePassword,
    ALREADY_USED,
    PASSWORDS_NOT_MATCHES
}
